--- a/sphinx.conf
+++ b/sphinx.conf
@@ -2,30 +2,30 @@
 # Minimal Sphinx configuration sample (clean, simple, functional)
 #
 
-source src1
+source goods
 {
 	type					= mysql
 
 	sql_host				= 127.0.0.1
 	sql_user				= root
 	sql_pass				= wuzhc2580
-	sql_db					= test
+	sql_db					= shop
 	sql_port				= 3306	# optional, default is 3306
 
-	sql_query				= \
-		SELECT id, group_id, UNIX_TIMESTAMP(date_added) AS date_added, title, content \
-		FROM documents
+	sql_query				= SELECT id, name, UNIX_TIMESTAMP(create_time) AS date, sell_price, goods_no FROM zc_goods
 
-	sql_attr_uint			= group_id
-	sql_attr_timestamp		= date_added
+	sql_field_string        = name
+	sql_field_string        = sell_price
+	sql_field_string        = goods_no
+	sql_attr_timestamp      = date               #从SQL读取到的值必须为整数，作为时间属性
 
-	sql_query_info			= SELECT * FROM documents WHERE id=$id
+	sql_query_info			= SELECT * FROM zc_goods WHERE id=$id
 }
 
 
-index test1
+index goods
 {
-	source					= src1
+	source					= goods
 	path					= /usr/local/coreseek/var/data/test1
 	docinfo					= extern
 	charset_type			= sbcs
